Fixed "Title jumps to the next line, out of the toolbar #508"

--- a/packages/mdc-toolbar/mdc-toolbar.scss
+++ b/packages/mdc-toolbar/mdc-toolbar.scss
@@ -69,7 +69,6 @@ $mdc-toolbar-mobile-breakpoint: 599px;
     &--align-end {
       justify-content: flex-end;
       order: 1;
-      flex: 0;
     }
   }
 
